--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,10 @@
-
+.Button {
+  background-color: rgb(84, 201, 84);
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
