--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,91 @@
   display: inline-block;
   font-size: 16px;
 }
+
+.navbar {
+  display: flex;
+  justify-content: center;
+
+  background-color: rgb(255, 255, 255);
+  position: fixed;
+  box-sizing: border-box;
+  top: 0;
+  height: 54px;
+  width: 100vw;
+  border-bottom: 1px solid #e8e8e8;
+}
+
+.posts {
+  box-sizing: border-box;
+  width: 100;
+
+  background-color: #fafafa;
+}
+
+.post {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.post div {
+  box-sizing: content-box;
+
+  width: 50%;
+  margin-top: 100px;
+  height: 500px;
+  background-color: white;
+  border: 1px solid #e8e8e8;
+}
+
+.container {
+  width: 350px;
+  height: 377px;
+  border: 1px solid #e8e8e8;
+  margin: 40px auto;
+}
+
+@font-face {
+  font-family: myFirstFont;
+  src: url(./Billabong.ttf);
+}
+
+.logo {
+  font-family: myFirstFont;
+  margin: 20px auto 30px;
+  font-size: 50px;
+  text-align: center;
+}
+
+.input {
+  display: block;
+  background-color: #fafafa;
+  border: 1px solid #e8e8e8;
+  height: 20px;
+  width: 60%;
+  padding: 0.2rem;
+  margin: 12px auto;
+}
+
+button {
+  display: block;
+  width: 60%;
+  border-radius: 0.2rem;
+  margin: 15px auto;
+  color: white;
+  background-color: royalblue;
+}
+
+.container1 {
+  width: 350px;
+  height: 60px;
+  border: 1px solid #e8e8e8;
+  margin: 40px auto;
+}
+
+.container1 div {
+  box-sizing: border-box;
+  text-align: center;
+  margin-top: 12px;
+}
