--- a/client/src/layout/upload.css
+++ b/client/src/layout/upload.css
@@ -19,6 +19,11 @@
   flex-direction: column;
 }
 
+.imagePreview {
+  width: 460px;
+  height: 460px;
+}
+
 .btn {
   box-sizing: border-box;
   text-align: center;
