--- a/client/src/layout/upload.css
+++ b/client/src/layout/upload.css
@@ -19,9 +19,29 @@
   flex-direction: column;
 }
 
+.crop-container {
+  position: absolute;
+
+  top: 100px;
+  left: 100px;
+  right: 20px;
+  bottom: 80px;
+  z-index: 11;
+}
+
 .imagePreview {
-  width: 460px;
-  height: 460px;
+  position: fixed;
+  width: 400px;
+  height: 400px;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  z-index: 11;
+}
+.btn2 {
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .btn {
