--- a/client/src/layout/Navbar.css
+++ b/client/src/layout/Navbar.css
@@ -14,6 +14,11 @@
 }
 
 .nav {
+  position: fixed;
+  top: 0;
+  overflow: hidden;
+  width: 100vw;
+  background-color: white;
   border-bottom: 1px solid #e8e8e8;
 }
 .navbar {
