--- a/client/src/layout/profile.css
+++ b/client/src/layout/profile.css
@@ -1,9 +1,19 @@
+.profileHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 .profile {
+  flex-basis: 75%;
   display: flex;
   flex-direction: row;
   height: 25vh;
-  border: 1px solid black;
+  padding: 1.5em auto;
   margin-top: 5em;
+  justify-content: center;
+
+  border-bottom: 1px solid #e8e8e8;
+  margin-bottom: 2em;
 }
 .profileImg div {
   margin: auto;
@@ -16,19 +26,42 @@
 .profileImg {
   display: flex;
   flex-direction: row;
-  border: 1px solid black;
+
   flex: 1 1 0;
 }
 
 .profileDetail {
-  border: 1px solid black;
   flex: 2 1 0;
+  display: flex;
+  flex-direction: column;
 }
+
+.profileDetail div {
+  flex: 1 1 0;
+}
+
+.profilePosts {
+  height: 45vh;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  margin: 1em;
+}
+.profilePosts div {
+  background: url("/2021-02-03T02-36-27.230Zom2.jpeg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 30vw;
+  height: 50vh;
+}
+
 .profile-img {
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  border: 1px solid black;
+
   display: flex;
   align-items: center;
   justify-content: center;
