--- a/client/src/layout/profile.css
+++ b/client/src/layout/profile.css
@@ -15,12 +15,30 @@
   border-bottom: 1px solid #e8e8e8;
   margin-bottom: 2em;
 }
+
+.prof {
+  margin: auto;
+  border-radius: 50%;
+  width: 9em;
+  height: 9em;
+  border: 1px solid black;
+  display: flex;
+  background: url("/2021-02-03T02-36-27.230Zom2.jpeg") contain;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .profileImg div {
   margin: auto;
   border-radius: 50%;
   width: 9em;
   height: 9em;
   border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .profileImg {
@@ -80,4 +98,37 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.uploadImg {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  border: 1px solid black;
+  z-index: 10;
+  transform: translate(-50%, -50%);
+  width: 25vw;
+  height: 25vh;
+  background-color: white;
+  border-radius: 2em;
+}
+
+.uploadImg1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: auto;
+}
+
+.uploadImg2 {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  border: 1px solid black;
+  z-index: 11;
+  transform: translate(-50%, -50%);
+  width: 25vw;
+  height: 25vh;
+  background-color: white;
+  border-radius: 2em;
 }
