--- a/client/src/component/Post/Post.css
+++ b/client/src/component/Post/Post.css
@@ -9,14 +9,32 @@
 }
 
 .postCard1 {
-  height: 3em;
+  display: flex;
+  border-bottom: 1px solid #e8e8e8;
+  padding-top: 1em;
+  padding-left: 1em;
+}
+
+.postCard1 div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2em;
+  height: 2em;
+  border: 1px solid black;
+  border-radius: 50%;
+  margin-right: 1em;
+  margin-bottom: 1em;
+}
+.postCard1 p {
+  display: inline;
 }
 
 .postCard2 {
-  height: 30em;
+  margin-bottom: 1em;
 }
 
 .postCard3 {
-  height: 3em;
   align-self: center;
+  margin-bottom: 1em;
 }
