--- a/client/src/OtherUsers/OtherProfile.css
+++ b/client/src/OtherUsers/OtherProfile.css
@@ -62,6 +62,14 @@
   height: 33vh;
   flex: 0 1 30%;
   margin: 0.5em;
-  border: 1px solid black;
+  border: 1px solid #e8e8e8;
   position: relative;
+  background-size: cover;
+  background-position: center center;
+}
+
+.OProfileImg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
