--- a/client/src/component/Post/Post.css
+++ b/client/src/component/Post/Post.css
@@ -6,6 +6,7 @@
   width: 40vw;
 
   margin-bottom: 4em;
+  background-color: white;
 }
 
 .postCard1 {
@@ -35,6 +36,7 @@
 }
 
 .postCard3 {
+  background-color: white;
   align-self: center;
   margin-bottom: 1em;
 }
