working on upload

--- a/client/src/component/Dashboard/Dashboard.css
+++ b/client/src/component/Dashboard/Dashboard.css
@@ -16,6 +16,8 @@
   flex-direction: column;
   align-self: center;
   margin-bottom: 2em;
+
+  cursor: pointer;
 }
 .postItem1 {
   text-align: center;
