--- a/client/src/layout/profile.css
+++ b/client/src/layout/profile.css
@@ -76,17 +76,37 @@
   flex-flow: row wrap;
 }
 
-.profilePosts div {
+.profilePosts1 {
   height: 33vh;
   flex: 0 1 30%;
+
   margin: 0.5em;
   border: 1px solid #e8e8e8;
   position: relative;
   background-size: cover;
   background-position: center center;
 }
+
+.profilePosts1:hover .profilePosts2 {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
+.profilePosts2 {
+  display: none;
+}
 .userProfile {
   /* background: url("/2021-02-03T02-36-27.230Zom2.jpeg"); */
+  position: relative;
   background-size: contain;
   background-repeat: no-repeat;
   width: 30vw;
