--- a/client/src/layout/upload.css
+++ b/client/src/layout/upload.css
@@ -68,7 +68,8 @@
 
 .postModal {
   position: fixed;
-  width: 70vw;
+  width: 50vw;
+
   border: 1px solid #e8e8e8;
   left: 50%;
   top: 50%;
@@ -78,4 +79,12 @@
 
   display: flex;
   flex-direction: column;
+}
+
+.postModal2 {
+  margin: auto;
+}
+.postModal3 {
+  display: flex;
+  justify-content: center;
 }
