--- a/client/src/component/Post/Post.css
+++ b/client/src/component/Post/Post.css
@@ -40,3 +40,15 @@
   align-self: center;
   margin-bottom: 1em;
 }
+
+.postCard4 {
+  border-top: 1px solid #e8e8e8;
+  padding: 1em;
+}
+.postCard4 input:focus {
+  outline: none;
+}
+
+.postCard4 div {
+  display: flex;
+}
