--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,12 +12,11 @@
   display: inline-block;
   font-size: 16px;
 }
-
-.container {
-  width: 350px;
-  height: 377px;
-  border: 1px solid #e8e8e8;
-  margin: 40px auto;
+.container2 {
+  margin: 1em 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 @font-face {
@@ -32,16 +31,6 @@
   text-align: center;
 }
 
-.input {
-  display: block;
-  background-color: #fafafa;
-  border: 1px solid #e8e8e8;
-  height: 20px;
-  width: 60%;
-  padding: 0.2rem;
-  margin: 12px auto;
-}
-
 button {
   display: block;
   width: 60%;
@@ -51,15 +40,24 @@ button {
   background-color: royalblue;
 }
 
-.container1 {
-  width: 350px;
-  height: 60px;
+.regInp {
+  display: block;
+  background-color: #fafafa;
   border: 1px solid #e8e8e8;
-  margin: 40px auto;
+  height: 2em;
+  width: 70%;
+  padding: 0.2rem;
+  margin: 0.5em auto;
+}
+.container1 {
+  width: 25vw;
+
+  border: 1px solid #e8e8e8;
+  margin: 2em auto;
 }
 
 .container1 div {
   box-sizing: border-box;
   text-align: center;
-  margin-top: 12px;
+  padding: 1em;
 }
